PP-12358 degateway resend confirmation email endpoint (#5308)
PP-12358 degateway resend confirmation email endpoint

- add new endpoint to charges api resource for resending confirmation emails with `serviceId` and `accountType`
- update unit and integration tests
- update surefire and failsafe configurations to show JUnit 5 'DisplayName' in the maven logs
- update `DatabaseFixtures` helper methods to return `GatewayAccountType`
- update OpenAPI spec